k8s/apps/leachnet/ln-media/plex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: ln-media
spec:
  selector:
    matchLabels:
      app: plex
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: plex
    spec:
      containers:
        - name: plex
          image: plexinc/pms-docker:latest
          ports:
            - name: pms
              containerPort: 32400
            - name: http
              containerPort: 32400
            - name: https
              containerPort: 32443
          readinessProbe:
            httpGet:
              path: /identity
              port: 32400
            initialDelaySeconds: 15
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /identity
              port: 32400
            initialDelaySeconds: 10
            timeoutSeconds: 10
          securityContext:
            # Required for hardware transcode on /dev/dri
            privileged: true
          volumeMounts:
          - name: config
            mountPath: /config
          - name: dev-dri
            mountPath: /dev/dri
          - name: transcode
            mountPath: /transcode
          - name: data-downloads-duck
            mountPath: /data/downloads/duck
          - name: data-media-pvr
            mountPath: /data/media/pvr
          # - name: data_video
          #   mountpath: /data/video
      volumes:
      - name: dev-dri
        hostPath:
          path: /dev/dri
          type: Directory
      - name: config
        persistentVolumeClaim:
          claimName: plex-config
      - name: transcode
        emptyDir:
      - name: data-downloads-duck
        persistentVolumeClaim:
          claimName: plex-downloads-duck
      - name: data-media-pvr
        persistentVolumeClaim:
          claimName: plex-media-pvr
