k8s/apps/leachnet/ln-media/plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
spec:
  ports:
  - name: http
    port: 32400
    targetPort: http
  selector:
    app: plex
