k8s/apps/leachnet/ln-media/plex/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http-prod
  name: plex-ingress
spec:
  rules:
  - host: plex.net.theleachfamily.me.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plex
            port:
              name: http
  tls:
  - hosts:
    - plex.net.theleachfamily.me.uk
    secretName: plex-cert
